--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,26 @@
-# Ignore node_modules
-node_modules/
-
-# Ignore environment files
-.env
-
-# Ignore log files
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignore build output
-dist/
-build/
+node_modules
+dist
+dist-ssr
+*.local
 
-# Ignore VS Code settings
-.vscode/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.env
